--- a/MLNETExamples/MLNETExamples.Tests/MLNETExamples.Tests.csproj
+++ b/MLNETExamples/MLNETExamples.Tests/MLNETExamples.Tests.csproj
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\MLNETExamples\MLNETExamples.csproj" />
+      <ProjectReference Include="..\MLNETExamples.ConsoleApp\MLNETExamples.ConsoleApp.csproj" />
     </ItemGroup>
 
 </Project>
