--- a/MLNETExamples/MLNETExamples.ConsoleApp/MLNETExamples.ConsoleApp.csproj
+++ b/MLNETExamples/MLNETExamples.ConsoleApp/MLNETExamples.ConsoleApp.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>MLNETExamples</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="3.0.1" />
