--- a/MLNETExamples/MLNETExamples.ConsoleApp/MLNETExamples.ConsoleApp.csproj
+++ b/MLNETExamples/MLNETExamples.ConsoleApp/MLNETExamples.ConsoleApp.csproj
@@ -3,6 +3,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>MLNETExamples</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="3.0.1" />
